--- a/src/styles.less
+++ b/src/styles.less
@@ -5,7 +5,7 @@
 * {
     padding: 0;
     margin: 0;
-    font-size: 14px;
+    font-size: 16px;
     background: #1e1e1e;
     color: #cccccc;
 }
@@ -13,4 +13,9 @@
 p {
     word-wrap: break-word;
     word-break: break-all;
+}
+
+input,
+textarea {
+    caret-color: burlywood;
 }
