--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,3 @@
 <div>
-  <div #history class="history">
-    <p>Music cil [版本 1.0.16299.231]</p>
-    <p>(c) 2017 Music Corporation。保留所有权利。</p>
-  </div>
-  <div #foot class="cli-input">
-    <span #head class="cli-head">{{headText}}</span>
-    <textarea onkeyup="return false;" #input (keyup)="onKey($event)" spellcheck="false" name="" id="" cols="30" rows="10"></textarea>
-  </div>
+  <div #terminal></div>
 </div>
