--- a/src/styles.less
+++ b/src/styles.less
@@ -2,9 +2,6 @@
 
 // https://v3.bootcss.com/components/#glyphicons
 // http://www.fhdq.net/
-@import 'assets/bootstrap-3.3.7-dist/css/bootstrap.min.css';
-@import '../node_modules/xterm/dist/xterm.css';
-@import '../node_modules/xterm/dist/addons/fullscreen/fullscreen.css';
 @import 'assets/js/jquery.terminal.min.css';
 body {
     overflow: hidden;
@@ -15,6 +12,7 @@ body {
 .cmd,
 .terminal .terminal-output div div,
 .cmd .prompt {
-    font-size: 16px;
-    line-height: 18px;
+    font-size: 18px;
+    line-height: 22px;
+    font-family: 'Courier New', Courier, monospace;
 }
