--- a/src/styles.less
+++ b/src/styles.less
@@ -4,6 +4,8 @@
 // http://www.fhdq.net/
 @import 'assets/js/jquery.terminal.min.css';
 body {
+    padding: 0;
+    margin: 0;
     overflow: hidden;
     background: #000;
 }
