--- a/src/styles.less
+++ b/src/styles.less
@@ -3,6 +3,7 @@
 // https://v3.bootcss.com/components/#glyphicons
 // http://www.fhdq.net/
 @import 'assets/js/jquery.terminal.min.css';
+@import 'assets/js/audio.css';
 body {
     padding: 0;
     margin: 0;
@@ -17,4 +18,12 @@ body {
     font-size: 18px;
     line-height: 22px;
     font-family: 'Courier New', Courier, monospace;
+}
+
+html,
+body {
+    margin: 0;
+    font-family: arial, "Microsoft YaHei";
+    background-color: #272822;
+    color: #FEFEFE;
 }
